--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "ejs": "^3.0.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^25.1.0"
+  },
+  "jest": {
+    "collectCoverage": true
   }
 }
